# nearcore-version-monitoring

./: Cargo.toml  Dockerfile  README.md  crontab.txt  entrypoint.sh  log_config.yaml
docker/: Dockerfile
src/: main.rs
