[package]
name = "nearcore-new-release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
regex = "1.7.0"
anyhow = "1.0.66"

reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

log = "0.4"
log4rs = "1.2.0"
